--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html2canvas-pro": "^1.5.11",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.539.0",
     "next": "15.3.6",
     "next-auth": "^4.24.7",
